packages/swift/Sources/CVoicevoxCore/include/voicevox_core.h

typedef int32_t VoicevoxAccelerationMode;
typedef int32_t VoicevoxResultCode;
/**
 * テキスト解析器としてのOpen JTalk。
 *
 * <b>構築</b>(_construction_)は ::voicevox_open_jtalk_rc_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_open_jtalk_rc_delete で行う。
 *
 * 参照カウント方式のスマートポインタ(reference-counted smart pointer)であり、
 * ::voicevox_synthesizer_new に渡されるときには参照カウンタがインクリメントされる形でオブジェクトの共有が行われる。
 *
 * \example{
 * ```c
 * OpenJtalkRc *open_jtalk;
 * voicevox_open_jtalk_rc_new("./open_jtalk_dic_utf_8-1.11", &open_jtalk);
 * // ⋮
 * voicevox_open_jtalk_rc_delete(open_jtalk);
 * ```
 * }
 *
 * \orig-impl{OpenJtalkRc}
 */
typedef struct OpenJtalkRc OpenJtalkRc;
/**
 * ONNX Runtime。
 *
 * シングルトンであり、インスタンスは高々一つ。
 *
 * ```c
 * const VoicevoxOnnxruntime *ort1;
 * voicevox_onnxruntime_load_once(
 *     voicevox_make_default_load_onnxruntime_options(), &ort1);
 * const VoicevoxOnnxruntime *ort2 = voicevox_onnxruntime_get();
 * assert(ort1 == ort2);
 * ```
 *
 * \orig-impl{VoicevoxOnnxruntime}
 */
typedef struct VoicevoxOnnxruntime VoicevoxOnnxruntime;
/**
 * ユーザー辞書。
 *
 * \orig-impl{VoicevoxUserDict}
 */
typedef struct VoicevoxUserDict VoicevoxUserDict;
/**
 * ::voicevox_onnxruntime_load_once のオプション。
 *
 * \availability{
 *   [リリース](https://github.com/voicevox/voicevox_core/releases)されているライブラリではiOSを除くプラットフォームで利用可能。詳細は<a href="#voicevox-core-availability">ファイルレベルの"Availability"の節</a>を参照。
 * }
 *
 * \no-orig-impl{VoicevoxLoadOnnxruntimeOptions}
 */
typedef struct VoicevoxLoadOnnxruntimeOptions {
  /**
   * ONNX Runtimeのファイル名（モジュール名）もしくはファイルパスを指定する。
   *
   * `dlopen`/[`LoadLibraryExW`](https://learn.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibraryexw)の引数に使われる。デフォルトは ::voicevox_get_onnxruntime_lib_versioned_filename と同じ。
   */
  const char *filename;
} VoicevoxLoadOnnxruntimeOptions;
/**
 * ::voicevox_synthesizer_new のオプション。
 *
 * \no-orig-impl{VoicevoxInitializeOptions}
 */
typedef struct VoicevoxInitializeOptions {
  /**
   * ハードウェアアクセラレーションモード
   */
  VoicevoxAccelerationMode acceleration_mode;
  /**
   * CPU利用数を指定
   * 0を指定すると環境に合わせたCPUが利用される
   */
  uint16_t cpu_num_threads;
} VoicevoxInitializeOptions;
const char *voicevox_get_onnxruntime_lib_versioned_filename(void);
const char *voicevox_get_onnxruntime_lib_unversioned_filename(void);
struct VoicevoxLoadOnnxruntimeOptions voicevox_make_default_load_onnxruntime_options(void);
const struct VoicevoxOnnxruntime *voicevox_onnxruntime_get(void);
VoicevoxResultCode voicevox_onnxruntime_load_once(struct VoicevoxLoadOnnxruntimeOptions options,
                                                  const struct VoicevoxOnnxruntime **out_onnxruntime);
VoicevoxResultCode voicevox_open_jtalk_rc_new(const char *open_jtalk_dic_dir,
                                              struct OpenJtalkRc **out_open_jtalk);
VoicevoxResultCode voicevox_open_jtalk_rc_use_user_dict(const struct OpenJtalkRc *open_jtalk,
                                                        const struct VoicevoxUserDict *user_dict);
VoicevoxResultCode voicevox_open_jtalk_rc_analyze(const struct OpenJtalkRc *open_jtalk,
                                                  const char *text,
                                                  char **output_accent_phrases_json);
void voicevox_open_jtalk_rc_delete(struct OpenJtalkRc *open_jtalk);
struct VoicevoxInitializeOptions voicevox_make_default_initialize_options(void);
const char *voicevox_get_version(void);
VoicevoxResultCode voicevox_audio_query_create_from_accent_phrases(const char *accent_phrases_json,
                                                                   char **output_audio_query_json);
VoicevoxResultCode voicevox_audio_query_validate(const char *audio_query_json);
VoicevoxResultCode voicevox_accent_phrase_validate(const char *accent_phrase_json);
VoicevoxResultCode voicevox_mora_validate(const char *mora_json);
VoicevoxResultCode voicevox_score_validate(const char *score_json);
VoicevoxResultCode voicevox_note_validate(const char *note_json);
VoicevoxResultCode voicevox_frame_audio_query_validate(const char *frame_audio_query_json);
VoicevoxResultCode voicevox_frame_phoneme_validate(const char *frame_phoneme_json);
VoicevoxResultCode voicevox_ensure_compatible(const char *score_json,
                                              const char *frame_audio_query_json);