packages/flutter/lib/src/bindings.g.dart

// ignore_for_file: type=lint, doc_directive_unknown

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// FFI bindings for voicevox_core C API
class VoicevoxBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VoicevoxBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VoicevoxBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> voicevox_get_onnxruntime_lib_versioned_filename() {
    return _voicevox_get_onnxruntime_lib_versioned_filename();
  }

  late final _voicevox_get_onnxruntime_lib_versioned_filenamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_onnxruntime_lib_versioned_filename');
  late final _voicevox_get_onnxruntime_lib_versioned_filename =
      _voicevox_get_onnxruntime_lib_versioned_filenamePtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> voicevox_get_onnxruntime_lib_unversioned_filename() {
    return _voicevox_get_onnxruntime_lib_unversioned_filename();
  }

  late final _voicevox_get_onnxruntime_lib_unversioned_filenamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_onnxruntime_lib_unversioned_filename');
  late final _voicevox_get_onnxruntime_lib_unversioned_filename =
      _voicevox_get_onnxruntime_lib_unversioned_filenamePtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  VoicevoxLoadOnnxruntimeOptions
      voicevox_make_default_load_onnxruntime_options() {
    return _voicevox_make_default_load_onnxruntime_options();
  }

  late final _voicevox_make_default_load_onnxruntime_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxLoadOnnxruntimeOptions Function()>>(
          'voicevox_make_default_load_onnxruntime_options');
  late final _voicevox_make_default_load_onnxruntime_options =
      _voicevox_make_default_load_onnxruntime_optionsPtr
          .asFunction<VoicevoxLoadOnnxruntimeOptions Function()>();

  ffi.Pointer<VoicevoxOnnxruntime> voicevox_onnxruntime_get() {
    return _voicevox_onnxruntime_get();
  }

  late final _voicevox_onnxruntime_getPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<VoicevoxOnnxruntime> Function()>>(
          'voicevox_onnxruntime_get');
  late final _voicevox_onnxruntime_get = _voicevox_onnxruntime_getPtr
      .asFunction<ffi.Pointer<VoicevoxOnnxruntime> Function()>();

  int voicevox_onnxruntime_load_once(
    VoicevoxLoadOnnxruntimeOptions options,
    ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>> out_onnxruntime,
  ) {
    return _voicevox_onnxruntime_load_once(
      options,
      out_onnxruntime,
    );
  }

  late final _voicevox_onnxruntime_load_oncePtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(VoicevoxLoadOnnxruntimeOptions,
                  ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>>)>>(
      'voicevox_onnxruntime_load_once');
  late final _voicevox_onnxruntime_load_once =
      _voicevox_onnxruntime_load_oncePtr.asFunction<
          int Function(VoicevoxLoadOnnxruntimeOptions,
              ffi.Pointer<ffi.Pointer<VoicevoxOnnxruntime>>)>();

  int voicevox_open_jtalk_rc_new(
    ffi.Pointer<ffi.Char> open_jtalk_dic_dir,
    ffi.Pointer<ffi.Pointer<OpenJtalkRc>> out_open_jtalk,
  ) {
    return _voicevox_open_jtalk_rc_new(
      open_jtalk_dic_dir,
      out_open_jtalk,
    );
  }

  late final _voicevox_open_jtalk_rc_newPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<OpenJtalkRc>>)>>(
      'voicevox_open_jtalk_rc_new');
  late final _voicevox_open_jtalk_rc_new =
      _voicevox_open_jtalk_rc_newPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<OpenJtalkRc>>)>();

  int voicevox_open_jtalk_rc_use_user_dict(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    ffi.Pointer<VoicevoxUserDict> user_dict,
  ) {
    return _voicevox_open_jtalk_rc_use_user_dict(
      open_jtalk,
      user_dict,
    );
  }

  late final _voicevox_open_jtalk_rc_use_user_dictPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<OpenJtalkRc>, ffi.Pointer<VoicevoxUserDict>)>>(
      'voicevox_open_jtalk_rc_use_user_dict');
  late final _voicevox_open_jtalk_rc_use_user_dict =
      _voicevox_open_jtalk_rc_use_user_dictPtr.asFunction<
          int Function(
              ffi.Pointer<OpenJtalkRc>, ffi.Pointer<VoicevoxUserDict>)>();

  int voicevox_open_jtalk_rc_analyze(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_accent_phrases_json,
  ) {
    return _voicevox_open_jtalk_rc_analyze(
      open_jtalk,
      text,
      output_accent_phrases_json,
    );
  }

  late final _voicevox_open_jtalk_rc_analyzePtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(ffi.Pointer<OpenJtalkRc>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_open_jtalk_rc_analyze');
  late final _voicevox_open_jtalk_rc_analyze =
      _voicevox_open_jtalk_rc_analyzePtr.asFunction<
          int Function(ffi.Pointer<OpenJtalkRc>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void voicevox_open_jtalk_rc_delete(
    ffi.Pointer<OpenJtalkRc> open_jtalk,
  ) {
    return _voicevox_open_jtalk_rc_delete(
      open_jtalk,
    );
  }

  late final _voicevox_open_jtalk_rc_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OpenJtalkRc>)>>(
          'voicevox_open_jtalk_rc_delete');
  late final _voicevox_open_jtalk_rc_delete = _voicevox_open_jtalk_rc_deletePtr
      .asFunction<void Function(ffi.Pointer<OpenJtalkRc>)>();

  VoicevoxInitializeOptions voicevox_make_default_initialize_options() {
    return _voicevox_make_default_initialize_options();
  }

  late final _voicevox_make_default_initialize_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxInitializeOptions Function()>>(
          'voicevox_make_default_initialize_options');
  late final _voicevox_make_default_initialize_options =
      _voicevox_make_default_initialize_optionsPtr
          .asFunction<VoicevoxInitializeOptions Function()>();

  ffi.Pointer<ffi.Char> voicevox_get_version() {
    return _voicevox_get_version();
  }

  late final _voicevox_get_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'voicevox_get_version');
  late final _voicevox_get_version =
      _voicevox_get_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int voicevox_audio_query_create_from_accent_phrases(
    ffi.Pointer<ffi.Char> accent_phrases_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_audio_query_json,
  ) {
    return _voicevox_audio_query_create_from_accent_phrases(
      accent_phrases_json,
      output_audio_query_json,
    );
  }

  late final _voicevox_audio_query_create_from_accent_phrasesPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode1 Function(
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_audio_query_create_from_accent_phrases');
  late final _voicevox_audio_query_create_from_accent_phrases =
      _voicevox_audio_query_create_from_accent_phrasesPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_audio_query_validate(
    ffi.Pointer<ffi.Char> audio_query_json,
  ) {
    return _voicevox_audio_query_validate(
      audio_query_json,
    );
  }

  late final _voicevox_audio_query_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_audio_query_validate');
  late final _voicevox_audio_query_validate = _voicevox_audio_query_validatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_accent_phrase_validate(
    ffi.Pointer<ffi.Char> accent_phrase_json,
  ) {
    return _voicevox_accent_phrase_validate(
      accent_phrase_json,
    );
  }

  late final _voicevox_accent_phrase_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_accent_phrase_validate');
  late final _voicevox_accent_phrase_validate =
      _voicevox_accent_phrase_validatePtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_mora_validate(
    ffi.Pointer<ffi.Char> mora_json,
  ) {
    return _voicevox_mora_validate(
      mora_json,
    );
  }

  late final _voicevox_mora_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_mora_validate');
  late final _voicevox_mora_validate = _voicevox_mora_validatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_score_validate(
    ffi.Pointer<ffi.Char> score_json,
  ) {
    return _voicevox_score_validate(
      score_json,
    );
  }

  late final _voicevox_score_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_score_validate');
  late final _voicevox_score_validate = _voicevox_score_validatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_note_validate(
    ffi.Pointer<ffi.Char> note_json,
  ) {
    return _voicevox_note_validate(
      note_json,
    );
  }

  late final _voicevox_note_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_note_validate');
  late final _voicevox_note_validate = _voicevox_note_validatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_frame_audio_query_validate(
    ffi.Pointer<ffi.Char> frame_audio_query_json,
  ) {
    return _voicevox_frame_audio_query_validate(
      frame_audio_query_json,
    );
  }

  late final _voicevox_frame_audio_query_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_frame_audio_query_validate');
  late final _voicevox_frame_audio_query_validate =
      _voicevox_frame_audio_query_validatePtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_frame_phoneme_validate(
    ffi.Pointer<ffi.Char> frame_phoneme_json,
  ) {
    return _voicevox_frame_phoneme_validate(
      frame_phoneme_json,
    );
  }

  late final _voicevox_frame_phoneme_validatePtr = _lookup<
          ffi
          .NativeFunction<VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>)>>(
      'voicevox_frame_phoneme_validate');
  late final _voicevox_frame_phoneme_validate =
      _voicevox_frame_phoneme_validatePtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int voicevox_ensure_compatible(
    ffi.Pointer<ffi.Char> score_json,
    ffi.Pointer<ffi.Char> frame_audio_query_json,
  ) {
    return _voicevox_ensure_compatible(
      score_json,
      frame_audio_query_json,
    );
  }

  late final _voicevox_ensure_compatiblePtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode1 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('voicevox_ensure_compatible');
  late final _voicevox_ensure_compatible = _voicevox_ensure_compatiblePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
